tests/snapshots/dependencies__package__fail__package_lib_target.snap
---
source: tests/dependencies.rs
expression: output
---
STDERR:
Error: No package found with name "foobar".

Packages present in workspace:
- package_lib_target


STDOUT:

