tests/snapshots/dependencies__package__fail__virtual_workspace_single_package_lib_target.snap
---
source: tests/dependencies.rs
expression: output
snapshot_kind: text
---
COMMAND:
dependencies
--package
foobar

STDERR:
Error: No package found with name "foobar".

Packages present in workspace:
- package_lib_target


STDOUT:
