tests/snapshots/dependencies__package__fail__workspace_single_package_bin_target.snap
---
source: tests/dependencies.rs
expression: output
---
COMMAND:
dependencies
--package
foobar

STDERR:
Error: No package found with name "foobar".

Packages present in workspace:
- package_bin_target


STDOUT:
